Now creates basic lensed images

--- a/paper.tex
+++ b/paper.tex
@@ -49,9 +49,12 @@ Deflection angle
 \end{equation}
 
 Ellipticity
+\begin{equation}
+    \epsilon(R) = \frac{2 \gamma/(1 - \kappa)}{1 + (\gamma/(1 - \kappa))^2}
+\end{equation}
 
 
-prove that spherical density profiles only have tangential shear
+prove that spherical density profiles only have tangential shear and ellipticity
 
 \newpage
 
@@ -110,7 +113,7 @@ We switch the dependence to $M_{200}$ and $c$ with:
 \subsection{Current plan}
 \begin{itemize}
     \item Calculate tangential shear and deflection angle for NFW and SIS
-    \item Consider single foreground lens halo with many
+    \item Consider single foreground lens halo with many background galaxies
     \item How to arrange and distribute background halos?
     \begin{itemize}
         \item Initial ellipticity
@@ -120,6 +123,7 @@ We switch the dependence to $M_{200}$ and $c$ with:
     \item Apply shear and deflection angle to background galaxies
     \item Attempt to fit both profiles, subtracting intrinsic shear, see if the fit is distinguishable
     \item How many foreground halos to test?
+    \item What redshift is $\rho_\mathrm{crit}$ evaluated at?
 
 \end{itemize}
 
