--- a/paper.tex
+++ b/paper.tex
@@ -10,7 +10,7 @@
 \maketitle
 
 \begin{abstract}
-abstract!!
+
 \end{abstract}
 
 \section{Introduction}
@@ -54,7 +54,7 @@ Ellipticity
 \end{equation}
 
 
-prove that spherical density profiles only have tangential shear and ellipticity
+Prove that spherical density profiles only have tangential shear and ellipticity
 
 \newpage
 
