Notes from meeting

--- a/paper.tex
+++ b/paper.tex
@@ -127,6 +127,20 @@ We switch the dependence to $M_{200}$ and $c$ with:
 
 \end{itemize}
 
+N sets of e1, e2, theta1, theta2
+
+Analyzing data:
+make histogram in annulus
+mean and standard deviation
+use log bins for theta
+
+
+50 gals/square arcminute
+5 arcminutes
+z_L = 0.3
+z_S = 1
+M_halo = 10^15 solar masses
+instrinsic ellipticity from gaussian with width 0.2
 
 
 \section{Methods}
