--- a/paper.tex
+++ b/paper.tex
@@ -40,8 +40,11 @@ Convergence at radius R
 
 Tangential shear at radius R
 \begin{equation}
-    \gamma(R) = \overline{\kappa}(R) - \kappa(R)
+    \gamma_t(R) = \overline{\kappa}(R) - \kappa(R)
 \end{equation}
+
+\[\gamma_1 = -\gamma_t \cos{2\phi}\]
+\[\gamma_2 = -\gamma_t \sin{2\phi}\]
 
 Deflection angle
 \begin{equation}
@@ -107,7 +110,26 @@ We switch the dependence to $M_{200}$ and $c$ with:
     \gamma(R) = \frac{\sigma^2 \left(\sqrt{R^2 + {r_c}^2} - r_c \right)}{\Sigma_\mathrm{crit} G R^2} - \frac{\sigma^2}{2 \Sigma_\mathrm{crit} G \sqrt{R^2 + {r_c}^2}}
 \end{equation}
 
+We switch dependence from $\sigma^2$ to $M_{200}$ with:
 
+\begin{equation}
+    r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}
+\end{equation}
+
+\begin{equation}
+    \sigma^2 = \frac{G M_{200}}{2 \left(
+        \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}}
+        - r_c \arctan \left(
+            \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit} {r_c}^3}
+        \right)
+    \right)}
+\end{equation}
+
+
+$M_{200}$ is defined as:
+\begin{equation}
+    M_{200} = M_{enc}(r_{200}) = 200 \rho_\mathrm{crit} \frac{4}{3} \pi r_{200}^3
+\end{equation}
 
 
 \subsection{Current plan}
@@ -122,8 +144,8 @@ We switch the dependence to $M_{200}$ and $c$ with:
     \end{itemize}
     \item Apply shear and deflection angle to background galaxies
     \item Attempt to fit both profiles, subtracting intrinsic shear, see if the fit is distinguishable
-    \item How many foreground halos to test?
-    \item What redshift is $\rho_\mathrm{crit}$ evaluated at?
+    \item How many foreground halos to test? - start with 1
+    \item What redshift is $\rho_\mathrm{crit}$ evaluated at? - at halo redshift
 
 \end{itemize}
 
@@ -137,9 +159,9 @@ use log bins for theta
 
 50 gals/square arcminute
 5 arcminutes
-z_L = 0.3
-z_S = 1
-M_halo = 10^15 solar masses
+$z_L = 0.3$
+$z_S = 1$
+$M_halo = 10^15$ solar masses
 instrinsic ellipticity from gaussian with width 0.2
 
 
