--- a/paper.tex
+++ b/paper.tex
@@ -10,7 +10,7 @@
 \maketitle
 
 \begin{abstract}
-
+We attempt to distinguish NFW and cored isothermal density profiles using weak gravitational lensing shear.
 \end{abstract}
 
 \section{Introduction}
@@ -19,118 +19,108 @@
 Using thin lens approximation
 
 Projected surface density at radius R
-\begin{equation}
-    \Sigma(R) = \int_{-\infty}^{\infty}{\rho(\sqrt{R^2 + z^2}) dz}
-\end{equation}
+\[\Sigma(R) = \int_{-\infty}^{\infty}{\rho(\sqrt{R^2 + z^2}) dz}\]
 
 Average projected surface density within radius R
-\begin{equation}
-    \overline{\Sigma}(R) = \frac{1}{\pi R^2} \int_0^{2\pi}{d\phi \int_0^{R}{dR'~\Sigma(R')R'}}
-\end{equation}
+\[\overline{\Sigma}(R) = \frac{1}{\pi R^2} \int_0^{2\pi}{d\phi \int_0^{R}{dR'~\Sigma(R')R'}}\]
 
 Critical surface density
-\begin{equation}
-    \Sigma_\mathrm{crit} = \frac{c^2}{4\pi G} \frac{D_S}{D_{SL} D_L}
-\end{equation}
+\[\Sigma_\mathrm{crit} = \frac{c^2}{4\pi G} \frac{D_S}{D_{SL} D_L}\]
 
-Convergence at radius R
-\begin{equation}
-    \kappa(R) = \frac{\Sigma(R)}{\Sigma_\mathrm{crit}}
-\end{equation}
+Convergence
+\[\kappa(\theta) = \frac{\Sigma(\theta)}{\Sigma_\mathrm{crit}}\]
 
-Tangential shear at radius R
-\begin{equation}
-    \gamma_t(R) = \overline{\kappa}(R) - \kappa(R)
-\end{equation}
-
+Tangential shear
+\[\gamma_t(\theta) = \overline{\kappa}(\theta) - \kappa(\theta)\]
 \[\gamma_1 = -\gamma_t \cos{2\phi}\]
 \[\gamma_2 = -\gamma_t \sin{2\phi}\]
+\[\gamma = \gamma_t = \sqrt{{\gamma_1}^2 + {\gamma_2}^2} = -\gamma_1 \cos{2\phi} -\gamma_2 \sin{2\phi}\]
 
 Deflection angle
-\begin{equation}
-    \vec{\alpha}(\vec{\theta}) = \overline{\kappa}(\theta)\vec{\theta}
-\end{equation}
+\[\vec{\alpha}(\vec{\theta}) = \overline{\kappa}(\theta)\vec{\theta}\]
+\[\vec{\beta} = \vec{\theta} - \vec{\alpha} = (1 - \overline{\kappa}(\theta))\vec{\theta} \]
 
 Ellipticity
-\begin{equation}
-    \epsilon(R) = \frac{2 \gamma/(1 - \kappa)}{1 + (\gamma/(1 - \kappa))^2}
-\end{equation}
+\[\epsilon_i = \frac{2 \gamma_i/(1 - \kappa)}{1 + \gamma^2/(1 - \kappa)^2}\]
 
+In small angle approximation, any length $R = D_L \theta$.
 
 Prove that spherical density profiles only have tangential shear and ellipticity
 
-\newpage
-
-\subsection{Navarro-Frenk-White (NFW) Profile}
-
-\begin{equation}
-    \rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_c}{(r/r_s)\left(1 + r/r_s\right)^2}
-\end{equation}
-
-\begin{equation}
-    \Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_c r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}} \right) \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right)
-\end{equation}
-[Bartelmann 2001]
-
-\begin{equation}
-    \overline{\Sigma}_\mathrm{NFW}(R) = \frac{4 \rho_\mathrm{crit} \delta_c r_s}{(R/r_s)^2} \left(
-        \frac{2}{\sqrt{(R/r_s)^2 - 1}} ~\arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) + \ln{\left(\frac{R/r_s}{2}\right)}
-    \right)
-\end{equation}
-
-\begin{equation}
-    \gamma(R) =
-\end{equation}
-
-We switch the dependence to $M_{200}$ and $c$ with:
-
-\begin{equation}
-    \delta_c = \frac{200}{3} \frac{c^3}{\ln(1 + c) - c/(1 + c)}
-\end{equation}
-
-\begin{equation}
-    r_s = \frac{1}{c} \left(\frac{3M_{200}}{800\pi \rho_\mathrm{crit}}\right)^\frac{1}{3}
-\end{equation}
 
 \subsection{Cored Isothermal Sphere Profile}
 
-\begin{equation}
-    \rho_\mathrm{iso}(r) = \frac{\sigma^2}{2\pi G (r^2 + {r_c}^2)}
-\end{equation}
+\[\rho_\mathrm{iso}(r) = \frac{\sigma^2}{2\pi G (r^2 + {r_c}^2)}\]
 
-\begin{equation}
-    \Sigma_\mathrm{iso}(R) = \frac{\sigma^2}{2 G \sqrt{R^2 + {r_c}^2}}
-\end{equation}
+\[\Sigma_\mathrm{iso}(R) = \frac{\sigma^2}{2 G \sqrt{R^2 + {r_c}^2}}\]
 
-\begin{equation}
-    \overline{\Sigma}_\mathrm{iso}(R) = \frac{\sigma^2 \left(\sqrt{R^2 + {r_c}^2} - r_c \right)}{G R^2}
-\end{equation}
+\[\overline{\Sigma}_\mathrm{iso}(R) = \frac{\sigma^2 \left(\sqrt{R^2 + {r_c}^2} - r_c \right)}{G R^2}\]
 
-\begin{equation}
-    \gamma(R) = \frac{\sigma^2 \left(\sqrt{R^2 + {r_c}^2} - r_c \right)}{\Sigma_\mathrm{crit} G R^2} - \frac{\sigma^2}{2 \Sigma_\mathrm{crit} G \sqrt{R^2 + {r_c}^2}}
-\end{equation}
+In terms of angles:
+
+\[\Sigma_\mathrm{iso}(\theta) = \frac{\sigma^2}{2 G D_L \sqrt{\theta^2 + {\theta_c}^2}}\]
+
+\[\overline{\Sigma}_\mathrm{iso}(\theta) = \frac{\sigma^2 \left(\sqrt{\theta^2 + {\theta_c}^2} - \theta_c \right)}{G D_L \theta^2}\]
+
+\[\gamma_\mathrm{iso}(\theta) = \frac{\sigma^2 \left(\sqrt{\theta^2 + {\theta_c}^2} - \theta_c \right)}{\Sigma_\mathrm{crit} G D_L \theta^2} - \frac{\sigma^2}{2 \Sigma_\mathrm{crit} G D_L \sqrt{\theta^2 + {\theta_c}^2}}\]
 
 We switch dependence from $\sigma^2$ to $M_{200}$ with:
 
-\begin{equation}
-    r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}
-\end{equation}
+\[\sigma^2 = \frac{G M_{200}}{2 \left(
+    \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}}
+    - r_c \arctan \left(
+        \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit} {r_c}^3}
+    \right)
+\right)}\]
+\[\sigma^2 = \frac{G M_{200}}{2 \left(
+    \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}}
+    - D_L \theta_c \arctan \left(
+        \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit} {D_L}^3 {\theta_c}^3}
+    \right)
+\right)}\]
 
-\begin{equation}
-    \sigma^2 = \frac{G M_{200}}{2 \left(
-        \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}}
-        - r_c \arctan \left(
-            \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit} {r_c}^3}
-        \right)
-    \right)}
-\end{equation}
+This is derived from the definition of $M_{200}$:
+
+\[M_{200} = M_{enc}(r_{200}) = 200 \rho_\mathrm{crit} \frac{4}{3} \pi {r_{200}}^3\]
+\[r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}\]
+
+Ellipticity equations are very ugly but trivial to calculate from the shear.
 
 
-$M_{200}$ is defined as:
-\begin{equation}
-    M_{200} = M_{enc}(r_{200}) = 200 \rho_\mathrm{crit} \frac{4}{3} \pi r_{200}^3
-\end{equation}
 
+\subsection{Navarro-Frenk-White (NFW) Profile}
+
+\[\rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_C}{(r/r_s)\left(1 + r/r_s\right)^2}\]
+
+\[\Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_C r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}} \right) \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right)\]
+[Bartelmann 2001]
+
+\[\overline{\Sigma}_\mathrm{NFW}(R) = \frac{4 \rho_\mathrm{crit} \delta_C r_s}{(R/r_s)^2} \left(
+    \frac{2}{\sqrt{(R/r_s)^2 - 1}} ~\arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) + \ln{\left(\frac{R/r_s}{2}\right)}
+\right)\]
+
+In terms of angles:
+
+\[\Sigma_\mathrm{NFW}(\theta) = \frac{2 \rho_\mathrm{crit} \delta_C D_L \theta_s}{(\theta/\theta_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} \right) \arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right)\]
+
+\[\overline{\Sigma}_\mathrm{NFW}(\theta) = \frac{4 \rho_\mathrm{crit} \delta_C D_L \theta_s}{(\theta/\theta_s)^2} \left(
+    \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} ~\arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right) + \ln{\left(\frac{\theta/\theta_s}{2}\right)}
+\right)\]
+
+\[\gamma_\mathrm{NFW}(\theta) = \frac{\overline{\Sigma}_\mathrm{NFW}(\theta) - \Sigma_\mathrm{NFW}(\theta)}{\Sigma_\mathrm{crit}} \]
+
+Can calculate ellipticities from tangential shear.
+
+We switch the dependence to $M_{200}$ and $C$ with:
+
+\[\delta_C = \frac{200}{3} \frac{C^3}{\ln(1 + C) - C/(1 + C)}\]
+
+\[r_s = \frac{1}{C} \left(\frac{3M_{200}}{800\pi \rho_\mathrm{crit}}\right)^\frac{1}{3}\]
+
+\[C = \frac{r_{200}}{r_s}\]
+
+
+\section{Methods}
 
 \subsection{Current plan}
 \begin{itemize}
@@ -149,6 +139,7 @@ $M_{200}$ is defined as:
 
 \end{itemize}
 
+Fake data:
 N sets of e1, e2, theta1, theta2
 
 Analyzing data:
@@ -161,11 +152,9 @@ use log bins for theta
 5 arcminutes
 $z_L = 0.3$
 $z_S = 1$
-$M_halo = 10^15$ solar masses
+$M_{halo} = 10^15$ solar masses
 instrinsic ellipticity from gaussian with width 0.2
 
-
-\section{Methods}
 
 
 
