--- a/paper.tex
+++ b/paper.tex
@@ -66,22 +66,12 @@ In terms of angles:
 
 We switch dependence from $\sigma^2$ to $M_{200}$ with:
 
-\[\sigma^2 = \frac{G M_{200}}{2 \left(
-    \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}}
-    - r_c \arctan \left(
-        \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit} {r_c}^3}
-    \right)
-\right)}\]
-\[\sigma^2 = \frac{G M_{200}}{2 \left(
-    \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}}
-    - D_L \theta_c \arctan \left(
-        \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit} {D_L}^3 {\theta_c}^3}
-    \right)
-\right)}\]
+\[\sigma^2 = \frac{M_{200} G}{2 \left( r_{200} - r_c \arctan{\left(\frac{r_{200}}{r_c}\right)} \right)}\]
 
 This is derived from the definition of $M_{200}$:
 
-\[M_{200} = M_{enc}(r_{200}) = 200 \rho_\mathrm{crit} \frac{4}{3} \pi {r_{200}}^3\]
+\[M_{200} = 200 \rho_\mathrm{crit} \frac{4}{3} \pi {r_{200}}^3\]
+\[M_{200} = M_\mathrm{enc}(r_{200}) = \frac{2 \sigma^2}{G} \left( r_{200} - r_c \arctan{\left(\frac{r_{200}}{r_c}\right)} \right)\]
 \[r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}\]
 
 Ellipticity equations are very ugly but trivial to calculate from the shear.
@@ -114,9 +104,8 @@ Can calculate ellipticities from tangential shear.
 We switch the dependence to $M_{200}$ and $C$ with:
 
 \[\delta_C = \frac{200}{3} \frac{C^3}{\ln(1 + C) - C/(1 + C)}\]
-
-\[r_s = \frac{1}{C} \left(\frac{3M_{200}}{800\pi \rho_\mathrm{crit}}\right)^\frac{1}{3}\]
-
+\[r_s = \frac{r_{200}}{C}\]
+\[r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}\]
 \[C = \frac{r_{200}}{r_s}\]
 
 
