Fixed an error in the NFW sigma formula, added Halo base class to reduce code repetition

--- a/paper.tex
+++ b/paper.tex
@@ -82,7 +82,7 @@ Ellipticity equations are very ugly but trivial to calculate from the shear.
 
 \[\rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_C}{(r/r_s)\left(1 + r/r_s\right)^2}\]
 
-\[\Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_C r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}} \right) \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right)\]
+\[\Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_C r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}}  \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) \right)\]
 [Bartelmann 2001]
 
 \[\overline{\Sigma}_\mathrm{NFW}(R) = \frac{4 \rho_\mathrm{crit} \delta_C r_s}{(R/r_s)^2} \left(
@@ -91,7 +91,7 @@ Ellipticity equations are very ugly but trivial to calculate from the shear.
 
 In terms of angles:
 
-\[\Sigma_\mathrm{NFW}(\theta) = \frac{2 \rho_\mathrm{crit} \delta_C D_L \theta_s}{(\theta/\theta_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} \right) \arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right)\]
+\[\Sigma_\mathrm{NFW}(\theta) = \frac{2 \rho_\mathrm{crit} \delta_C D_L \theta_s}{(\theta/\theta_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} \arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right) \right)\]
 
 \[\overline{\Sigma}_\mathrm{NFW}(\theta) = \frac{4 \rho_\mathrm{crit} \delta_C D_L \theta_s}{(\theta/\theta_s)^2} \left(
     \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} ~\arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right) + \ln{\left(\frac{\theta/\theta_s}{2}\right)}
