Added pretty much complete analysis code

--- a/paper.tex
+++ b/paper.tex
@@ -145,6 +145,9 @@ $M_{halo} = 10^15$ solar masses
 instrinsic ellipticity from gaussian with width 0.2
 
 
+Assume same DS since this can be determined by redshift anyway
+
+estimating ellipticity has well-documented issues [cite] due to noise and PSF
 
 
 \end{document}
