Data exported with correct uncertainty on the mean

--- a/paper.tex
+++ b/paper.tex
@@ -4,13 +4,13 @@
 % \usepackage{txfonts}
 
 \begin{document}
-\title{Distinguishing NFW and Isothermal Density Profiles with Gravitational Lensing}
+\title{Distinguishing NFW and Isothermal Density Profiles with Weak Gravitational Lensing}
 \author{}
 \date{\today}
 \maketitle
 
 \begin{abstract}
-We attempt to distinguish NFW and cored isothermal density profiles using weak gravitational lensing shear.
+We examine the feasibility of distinguishing NFW and cored isothermal density profiles using weak gravitational lensing shear.
 \end{abstract}
 
 \section{Introduction}
