--- a/paper.tex
+++ b/paper.tex
@@ -1,11 +1,18 @@
-\documentclass[]{article}
+\documentclass[10pt]{article}
 \usepackage[margin=1in]{geometry}
 \usepackage{parskip}
+\usepackage{microtype}
+\usepackage{natbib}
+\usepackage{graphicx}
 % \usepackage{txfonts}
 
+\graphicspath{ {figures/} }
+
+
 \begin{document}
+
 \title{Distinguishing NFW and Isothermal Density Profiles with Weak Gravitational Lensing}
-\author{}
+\author{Ian Holst and Doyee Byun}
 \date{\today}
 \maketitle
 
@@ -14,12 +21,13 @@ We examine the feasibility of distinguishing NFW and cored isothermal density pr
 \end{abstract}
 
 \section{Introduction}
+Background/history of this research topic, goals for this section
 
 \subsection{General spherical density profile $\rho(r)$}
-Using thin lens approximation
+Here we define our conventions for various lensing quantities, which mainly conform to those used by \citet{Dodelson2017}. We use the thin lens approximation and assume spherical lens profiles.
 
 Projected surface density at radius R
-\[\Sigma(R) = \int_{-\infty}^{\infty}{\rho(\sqrt{R^2 + z^2}) dz}\]
+\[\Sigma(R) = \int_{-\infty}^{\infty}{dz\ \rho(\sqrt{R^2 + z^2})}\]
 
 Average projected surface density within radius R
 \[\overline{\Sigma}(R) = \frac{1}{\pi R^2} \int_0^{2\pi}{d\phi \int_0^{R}{dR'~\Sigma(R')R'}}\]
@@ -42,6 +50,7 @@ Deflection angle
 
 Ellipticity
 \[\epsilon_i = \frac{2 \gamma_i/(1 - \kappa)}{1 + \gamma^2/(1 - \kappa)^2}\]
+\[\epsilon =  -\epsilon_1 \cos{2\phi} -\epsilon_2 \sin{2\phi}\]
 
 In small angle approximation, any length $R = D_L \theta$.
 
@@ -80,20 +89,20 @@ Ellipticity equations are very ugly but trivial to calculate from the shear.
 
 \subsection{Navarro-Frenk-White (NFW) Profile}
 
-\[\rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_C}{(r/r_s)\left(1 + r/r_s\right)^2}\]
+\[\rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_c}{(r/r_s)\left(1 + r/r_s\right)^2}\]
 
-\[\Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_C r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}}  \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) \right)\]
+\[\Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_c r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}}  \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) \right)\]
 [Bartelmann 2001]
 
-\[\overline{\Sigma}_\mathrm{NFW}(R) = \frac{4 \rho_\mathrm{crit} \delta_C r_s}{(R/r_s)^2} \left(
+\[\overline{\Sigma}_\mathrm{NFW}(R) = \frac{4 \rho_\mathrm{crit} \delta_c r_s}{(R/r_s)^2} \left(
     \frac{2}{\sqrt{(R/r_s)^2 - 1}} ~\arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) + \ln{\left(\frac{R/r_s}{2}\right)}
 \right)\]
 
 In terms of angles:
 
-\[\Sigma_\mathrm{NFW}(\theta) = \frac{2 \rho_\mathrm{crit} \delta_C D_L \theta_s}{(\theta/\theta_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} \arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right) \right)\]
+\[\Sigma_\mathrm{NFW}(\theta) = \frac{2 \rho_\mathrm{crit} \delta_c D_L \theta_s}{(\theta/\theta_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} \arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right) \right)\]
 
-\[\overline{\Sigma}_\mathrm{NFW}(\theta) = \frac{4 \rho_\mathrm{crit} \delta_C D_L \theta_s}{(\theta/\theta_s)^2} \left(
+\[\overline{\Sigma}_\mathrm{NFW}(\theta) = \frac{4 \rho_\mathrm{crit} \delta_c D_L \theta_s}{(\theta/\theta_s)^2} \left(
     \frac{2}{\sqrt{(\theta/\theta_s)^2 - 1}} ~\arctan\left(\sqrt{\frac{\theta/\theta_s - 1}{\theta/\theta_s + 1}} \right) + \ln{\left(\frac{\theta/\theta_s}{2}\right)}
 \right)\]
 
@@ -101,12 +110,12 @@ In terms of angles:
 
 Can calculate ellipticities from tangential shear.
 
-We switch the dependence to $M_{200}$ and $C$ with:
+We switch the dependence to $M_{200}$ and $c$ with:
 
-\[\delta_C = \frac{200}{3} \frac{C^3}{\ln(1 + C) - C/(1 + C)}\]
-\[r_s = \frac{r_{200}}{C}\]
+\[\delta_c = \frac{200}{3} \frac{c^3}{\ln(1 + c) - c/(1 + c)}\]
+\[r_s = \frac{r_{200}}{c}\]
 \[r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}\]
-\[C = \frac{r_{200}}{r_s}\]
+\[c = \frac{r_{200}}{r_s}\]
 
 
 \section{Methods}
@@ -149,5 +158,7 @@ Assume same DS since this can be determined by redshift anyway
 
 estimating ellipticity has well-documented issues [cite] due to noise and PSF
 
+\bibliographystyle{plainnat}
+\bibliography{references}
 
 \end{document}
