New subsection in introduction to describe project purpose.

--- a/paper.tex
+++ b/paper.tex
@@ -21,7 +21,7 @@ We examine the feasibility of distinguishing NFW and cored isothermal density pr
 \end{abstract}
 
 \section{Introduction}
-Background/history of this research topic, goals for this section
+Two commonly used density profiles in weak gravitational lensing are the isothermal profile and the Navarro-Frenk-White (NFW) profile.
 
 \subsection{General spherical density profile $\rho(r)$}
 Here we define our conventions for various lensing quantities, which mainly conform to those used by \citet{Dodelson2017}. We use the thin lens approximation and assume spherical lens profiles.
@@ -64,7 +64,7 @@ Prove that spherical density profiles only have tangential shear and ellipticity
 % \[\Sigma_\mathrm{iso}(R) = \frac{\sigma^2}{2 G \sqrt{R^2 + {r_c}^2}}\]
 %
 % \[\overline{\Sigma}_\mathrm{iso}(R) = \frac{\sigma^2 \left(\sqrt{R^2 + {r_c}^2} - r_c \right)}{G R^2}\]
-% 
+%
 % In terms of angles:
 
 \[\Sigma_\mathrm{iso}(\theta) = \frac{\sigma^2}{2 G D_L \sqrt{\theta^2 + {\theta_c}^2}}\]
@@ -121,6 +121,8 @@ We switch the dependence to $M_{200}$ and $c$ with:
 
 Estimating ellipticity has well-documented issues [cite] due to noise and PSF
 
+\subsection{Project Purpose}
+The goal of this project is to devise a method to analyze lensed galaxy cluster data and find which density profile is more probable between the isothermal and NFW profiles.
 
 \newpage
 
