building up methods section. nothing much just barebones for now

--- a/paper.tex
+++ b/paper.tex
@@ -127,6 +127,9 @@ The goal of this project is to devise a method to analyze lensed galaxy cluster 
 \newpage
 
 \section{Methods}
+\subsection{Calculation of Shear and Deflection Angles for Each Profile}
+
+\subsection{Modelling of Foreground Lens and Background Galaxies}
 
 \begin{enumerate}
     \item Calculate tangential shear and deflection angle for NFW and cored isothermal profiles.
