--- a/paper.tex
+++ b/paper.tex
@@ -182,6 +182,8 @@ The goal of this project is to devise a method to analyze lensed galaxy cluster 
 \section{Results and Conclusion}
 
 From our data analysis, we were able to find the more probable density profile of a simulated data set.
+Since the simulated data is based on the NFW and isothermal profile models, we were able to decisively distinguish between the two.
+When analyzing real observed data, we expect the probability ratios to be relatively more even.
 Future goals include the use of these methods to analyze observed data of galaxy clusters to find the density profile of their lenses.
 
 \bibliographystyle{plainnat}
