--- a/paper.tex
+++ b/paper.tex
@@ -4,6 +4,7 @@
 \usepackage{microtype}
 \usepackage{natbib}
 \usepackage{graphicx}
+\usepackage{amsmath}
 % \usepackage{txfonts}
 
 \graphicspath{ {figures/} }
@@ -30,6 +31,13 @@ A common use of lensing is
 Two commonly used density profiles in weak gravitational lensing are the isothermal profile and the Navarro-Frenk-White (NFW) profile.
 We start with introducing the general characteristics of spherical density profiles, followed by cored isothermal and NFW profiles.
 We then describe the purpose of our project, to distinguish between NFW and isothermal profiles, in detail.
+The goal of this project is to devise a method to analyze lensed galaxy cluster data and find which density profile is more probable between the isothermal and NFW profiles.
+In order to do so, we generate simulated data sets and analyze them to find the more probable profiles they would fit into.
+This analysis method is expected to be usable in determining the characteristics of real observed data as well.
+
+
+
+Estimating ellipticity has well-documented issues [cite] due to noise and PSF
 
 
 We describe the common characteristics of spherical density profiles.
@@ -51,23 +59,28 @@ The critical surface density marks the typical boundary between what is consider
 \Sigma_\mathrm{crit} = \frac{c^2}{4\pi G} \frac{D_S}{D_{SL} D_L}
 \end{equation}
 
+At small angles, we can assume from small angle approximations that $R = D_L \theta$.
+
 We also define the convergence, $\kappa$ to be
 \begin{equation}
 \kappa(\theta) = \frac{\Sigma(\theta)}{\Sigma_\mathrm{crit}}
 \end{equation}
 
+Strong lensing features take over when the convergence is greater than one.
 Tangential shear, along with the components of shear are shown as follows.
 \begin{equation}
 \gamma_t(\theta) = \overline{\kappa}(\theta) - \kappa(\theta)
 \end{equation}
 
-
+The tangential shear is decomposed into two components, $\gamma_1$ and $\gamma_2$. $\gamma_1$ represents stretching along the $\theta_x$ and $\theta_y$ axes, and $\gamma_2$
 \begin{equation}
-\gamma_1 = -\gamma_t \cos{2\phi}
+\begin{split}
+\gamma_1 = -\gamma_t \cos{2\phi}\\
 \gamma_2 = -\gamma_t \sin{2\phi}
+\end{split}
 \end{equation}
 
-It can be shown that for a spherical lens profile, the only component of shear should be the tangential shear, $\gamma_t$:
+It can be shown that for a spherical lens profile, the only component of shear $\gamma$ should be the tangential shear, $\gamma_t$:
 \citep{Dodelson2017}
 \begin{equation}
 \gamma = \gamma_t = \sqrt{{\gamma_1}^2 + {\gamma_2}^2} = -\gamma_1 \cos{2\phi} -\gamma_2 \sin{2\phi}
@@ -89,9 +102,6 @@ while ellipticity is
 \epsilon =  -\epsilon_1 \cos{2\phi} -\epsilon_2 \sin{2\phi}
 \end{equation}
 
-At small angles, we can assume from small angle approximations that $R = D_L \theta$.
-
-Prove that spherical density profiles only have tangential shear and ellipticity
 
 
 \section{Cored Isothermal Sphere Profile}
@@ -143,6 +153,11 @@ r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}
 
 The ellipticity equations, while not quite elegant, are trivial to calculate from the shear.
 
+\begin{figure}
+    \includegraphics{isothermalproperties.pdf}
+    \caption{Lensing quantities for a CIS profile with $M_{200} = 10^{15} M_\odot$ and $r_c = 10$ kpc.}
+    \label{}
+\end{figure}
 
 
 \section{Navarro-Frenk-White (NFW) Profile}
@@ -150,6 +165,8 @@ The ellipticity equations, while not quite elegant, are trivial to calculate fro
 \begin{equation}
 \rho_\mathrm{NFW}(r) = \frac{\rho_\mathrm{crit} \delta_c}{(r/r_s)\left(1 + r/r_s\right)^2}
 \end{equation}
+
+What redshift is $\rho_\mathrm{crit}$ evaluated at? - at halo redshift - can we use current time?
 
 % \begin{equation}\Sigma_\mathrm{NFW}(R) = \frac{2 \rho_\mathrm{crit} \delta_c r_s}{(R/r_s)^2 - 1} \left(1 - \frac{2}{\sqrt{(R/r_s)^2 - 1}}  \arctan\left(\sqrt{\frac{R/r_s - 1}{R/r_s + 1}} \right) \right)
 % \end{equation}
@@ -195,14 +212,14 @@ r_{200} = \left( \frac{3 M_{200}}{800 \pi \rho_\mathrm{crit}} \right)^{1/3}
 c = \frac{r_{200}}{r_s}
 \end{equation}
 
-Estimating ellipticity has well-documented issues [cite] due to noise and PSF
+\begin{figure}
+    \includegraphics{nfwproperties.pdf}
+    \caption{Lensing quantities for a NFW profile with $M_{200} = 10^{15} M_\odot$ and $c = 10$.}
+    \label{}
+\end{figure}
 
-\subsection{Project Purpose}
-The goal of this project is to devise a method to analyze lensed galaxy cluster data and find which density profile is more probable between the isothermal and NFW profiles.
-In order to do so, we generate simulated data sets and analyze them to find the more probable profiles they would fit into.
-This analysis method is expected to be usable in determining the characteristics of real observed data as well.
 
-\newpage
+
 
 \section{Methods}
 
@@ -232,6 +249,13 @@ Based on the calculations shown above, we have modelled singular lenses correspo
 \subsection{Generating Simulated Data}
 We applied the shear and deflection angles to background galaxies to get simulated data: $N$ sets of $\epsilon_1$, $\epsilon_2$, $\theta_1$, $\theta_2$
 
+\begin{figure}
+    \includegraphics[width=0.49\textwidth]{isothermalellipticities.pdf}
+    \includegraphics[width=0.49\textwidth]{nfwellipticities.pdf}
+    \caption{plots}
+    \label{}
+\end{figure}
+
 
 \subsection{Data Analysis and Density Profile Determination}
 \begin{enumerate}
@@ -240,16 +264,9 @@ We applied the shear and deflection angles to background galaxies to get simulat
 \item Attempt to fit both NFW and isothermal profiles, see if the fit is distinguishable
 \end{enumerate}
 
+What theta range should we look at? (5 arcminutes?)
 
-\subsection{Questions}
-\begin{itemize}
-    \item How to properly do sigma contours?
-    \item What theta range should we look at? (5 arcminutes?)
-    \item What redshift is $\rho_\mathrm{crit}$ evaluated at? - at halo redshift - can we use current time?
-    \item Using $c = 10$?
-    \item Where to go from here?
-\end{itemize}
-
+How to properly do sigma contours?
 
 \section{Results and Conclusion}
 
@@ -263,6 +280,9 @@ From our data analysis, we were able to find the more probable density profile o
 Since the simulated data is based on the NFW and isothermal profile models, we were able to decisively distinguish between the two.
 When analyzing real observed data, we expect the probability ratios to be relatively more even.
 Future goals include the use of these methods to analyze observed data of galaxy clusters to find the density profile of their lenses.
+
+Where to go from here?
+
 
 \bibliographystyle{plainnat}
 \bibliography{references}
